--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
 	<h1>About me</h1>
+	<h2>Hi! Welcome to my page</h2>
+	<h3>I`m <span>Mario</span></h3>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, nostrum. Illum corporis, vel, quam, dolor culpa quas natus consequatur maiores accusantium eum inventore optio omnis id quae ex aperiam modi.</p>
 </body>
 </html>
