--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<title>Mi pagina web</title>
 </head>
 <body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="">Home</a></li>
+				<li><a href="">About Me</a></li>
+				<li><a href="">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
 	<h1>About me</h1>
 </body>
 </html>
