--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 		<h3>I`m <span>Mario</span></h3>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, nostrum. Illum corporis, vel, quam, dolor culpa quas natus consequatur maiores accusantium eum inventore optio omnis id quae ex aperiam modi.</p>
 	</main>
-	<footer><a href="">MarioMartinez</footer>
+	<footer>
+		<ul>
+			<li>
+				<a href="">MarioMartinez</a>
+			</li>
+			<li>
+				<a href="">Git y GitHub</a>
+			</li>
+		</ul>
+
+	</footer>
 </body>
 </html>
