--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
 	<h2>Hi! Welcome to my page</h2>
 	<h3>I`m <span>Mario</span></h3>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, nostrum. Illum corporis, vel, quam, dolor culpa quas natus consequatur maiores accusantium eum inventore optio omnis id quae ex aperiam modi.</p>
+	<section>
+		<h3>Comida</h3>
+		<h4>Comida Mexicana</h4>
+		<img src="http://cdn.pixabay.com/photo/2017/03/16/06/38//tequila-2148295_960_720.jpg" alt="comida mexicana">
+	</section>
 </body>
 </html>
